# foxglove-eval

./: README.md  prepare_mcap_file.ipynb  pyproject.toml  utils.py
data/: example_trajectory.geojson
